# i3utils

./: Cargo.toml
src/: adir.rs  gtk.rs  lib.rs  rmenu.rs
src/gtk/widgets/: config.rs
